# linuxeye

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  setup.sh
data/: io.linuxeye.collect.policy  linuxeye.desktop
src/: CMakeLists.txt  main.cpp
src/collectors/: CMakeLists.txt  basecollector.h  boardcollector.cpp  boardcollector.h  cpucollector.cpp  cpucollector.h  gpucollector.cpp  gpucollector.h  memorycollector.cpp  memorycollector.h  networkcollector.cpp  networkcollector.h  oscollector.cpp  oscollector.h  privilegedcollector.cpp  privilegedcollector.h  sensorcollector.cpp  sensorcollector.h  storagecollector.cpp  storagecollector.h
src/core/: CMakeLists.txt  application.cpp  application.h  systeminfo.cpp  systeminfo.h
src/helper/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  boardpanel.cpp  boardpanel.h  cpupanel.cpp  cpupanel.h  gpupanel.cpp  gpupanel.h  mainwindow.cpp  mainwindow.h  memorypanel.cpp  memorypanel.h  networkpanel.cpp  networkpanel.h  ospanel.cpp  ospanel.h  overviewpanel.cpp  overviewpanel.h  sensorpanel.cpp  sensorpanel.h  sidebar.cpp  sidebar.h  storagepanel.cpp  storagepanel.h  style_helper.h
src/utils/: CMakeLists.txt  fileutils.cpp  fileutils.h  hwutils.cpp  hwutils.h  sizeformatter.cpp  sizeformatter.h
